# ReadPE

./: .gitignore  README.md
tests/: conftest.py  pyproject.toml  ru_readme.md  setup.py  test_returncodes.py  test_stderr.py  test_stdout.py
tests/readpe/: __main__.py  readpe.py  ru_readme.md  testsample.py  utils.py
tests/test-data/expected-results/smoke/Framework/: readString_MoreThanInternalBuffer_bin.stderr  readString_equalToInternalBuffer.stderr
tests/test-data/expected-results/smoke/pe/: Correct32.stderr  Correct32_bin.stdout  Correct64.stderr  ExportedByOrdinals32.stderr  ExportedForwardOne32_bin.stderr  ExportedSomeForwards32.stderr  ExportedSomeForwards32_bin.stdout  Incomplete_DosHeader_bin.stderr  Incomplete_NTHeaders.stderr  Incomplete_SectionHeaders32_bin.stderr  Incomplete_SectionHeaders64.stderr  Incorrect_DosSignature.stderr  Incorrect_NtSignature_bin.stderr  Incorrect_OptHdrMagicVal32_bin.stderr  Incorrect_OptHdrMagicVal64_bin.stderr  NtHeaders32_With22Sections.stderr  OrdinalBase_is_5_img32_bin.stderr  SectionAndFileAlignments_are_identical.stderr  TlsCallback.stderr  boundHeaderOne.stderr  boundHeaderOne.stdout  cygintl-3_dll.stderr  cygintl-3_dll.stdout  exportElementsCountIsZero32.stderr  mz_pe_combined32_00.stderr  pe_vectors_txt.stderr
tests/test-data/expected-results/smoke/stupid/: EmptyFile.stderr
tests/test-data/expected-results/smoky/: report.txt
tests/test-data/expected-results/smoky/Framework/: readString_MoreThanInternalBuffer.stderr  readString_equalToInternalBuffer.stderr
tests/test-data/test-samples/smoke/pe/: pe_vectors.md5  (+1 more)
(+181 files in other folders)
