[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Testing readpe tool"
authors = ["Dmitry Andriyankov <d.andriyankov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--test-samples-dir=./test-data/test-samples/smoky/ --test-reports-dir=./test-data/expected-results/smoky/"
