[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Testing readpe tool"
authors = ["Dmitry Andriyankov <d.andriyankov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--test-samples-dir=./test-data/test-samples/smoke/ --test-reports-dir=./test-data/expected-results/smoke/"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)7s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
